# [[file:runners.note::4f297f9c][4f297f9c]]
[package]
name = "gosh-runner"
version = "0.1.1"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
tempfile = "3.0"
nix = "0.21"
procfs = {version = "0.9"}
tokio = { version="1.8.4", features=["full"]}
slab = "0.4"
slotmap = { version = "1.0", features = ["serde"] }
bimap = { version = "0.6", features = ["serde"] }
libc = "0.2"
duct = "0.13"
shared_child = "0.3"
gosh-core = { version = "0.1.0" }
clap = {version="4", features = ["derive"]}
bytes = { version = "1" }

# procspawn = "0.8"
# futures = "0.1"
# heim = "0.0.8"
# nails = {path = "../nails/nails" }

[dev-dependencies]
anyhow = "1"

[features]
adhoc = []
# client = ["reqwest"]
# 4f297f9c ends here
